lab1/Test/L1-A-3-40.output
Error Type A at Line 15
Error Type B at Line 36
Error Type B at Line 39
Error Type B at Line 47
