lab1/Test/L1-A-3-40.cmm
struct OdxjNO22ZugG4cyU1vb I_19tE4VMUJGh ( ) {
  float ilCo = 1742279723.1839483425 [ - 1615068059 
    . p * ! M5fEP7 * - cVlxXi7NdR3TaJ / ! yTOko5oU2aD3x1 
    * - LcQzwRCd9L05Wt >= ! qH9 * l + TOPQtVvdfStiY8lEWJ 
    + xy4a1NbhuxbQT + CQhQXxzqffQ - EbpSy6yvpz4 > ! FWGSRAbOlw 
    / g9udLmmlq - g6u6WwKbkI2W > ! gH7SMNzO2jNgxB4V / 
    cEUZK1b0cOs_ + npfQRerXaoo < ! cnPCYuL * l_Nl8Qwd 
    * CjpeEjNSjdnkIUxwC9Mh / Iem * Jzx1 / Ku6IqcDIbFGp0VN 
    > - DAC4xiS3szsADa * OESsiq6g6t9c < 353064356 + lqkgQ9 
    + QRx3h + SIpQ <= - r5DwymJ3ZC1MjHD45bxu * d28_US1YzIDz0WeRB3kf 
    - h_GOKmcsJyOF - Zn0TegUTRctt + dPQJAkQ8XTzUxvy5AKd 
    - y7Q6OJeohGgCwlq1qcR - Hxs7ez7WFhL + rNHR5iMJB4v2g_G 
    > - CwsGhUicSgmZ - EQvtXB <= - SN / M6a9khg / LAji5VoZCTtL 
    * VkclJzpihPaf2IpQa * wlZFuSU3YAGOg5SH * uTCdAJFKS4hBweKVB3 
    %- sRnN8k3pM - h - NdXb_lSjCkjBJVC9 - PAw8_s7ts > 
    - UvsCa9zMbAC - x && ! CgB69E * mMbd07a && caCmBY2egJDmgQyn_j 
    ( LogmWydPi2l7ugo59 ) <= ShdFnBwT != TJZC6t && ! cV_6ZgJ9Kr 
    * uWiy3 * cl8 / f8gtPlEV1wG9Pc + RnwOqhB0 + DQhniR4XitHOWDK 
    >= zWIF66_HVPztdW_MabR != O4LAyGLpoeWH5RkGXDMS <= 
    kvg5o1ThhgmAv >= uULG7l3VGHs24 != iKzyxUnSG_3VX5sAfvoA 
    != Tp7cJQjd0vht6vhnoLy == wZr4FmLVuYgVYx1w >= THlme 
    == Q < oR7TphmwDcqgJEY1 <= dvbMb3wsoFfIuBm <= herHurbJmGjw16Q 
    && - FyYwStbY_6T4XrxjZ * hp * xIaTKvp52 - Q6axo3nmwGSgJ56f 
    - SJ6PzH8JycxHwKc >= b8FvI != X0lwpGXe8_yy <= k00Lu 
    ] . PM = ! efuC ( ) . PVt3GvqURvsBu / - TeLW9jBlOE8Bnclec6 
    + 1810621482.1883337174 . zgW1aWRrne [ V ] / Mb_rCAuU577YIKEuSyC5 
    * CPuRq != - F4KPRXi5hq - OkviaTmAzrONCQhUvAL - NeFsPv3T24O7C6BWn 
    + VGkPfY2AdARh >= nN2OeHa5hIt ( N9Nl1KKOoxsJqd0Jg0 
    ) * PRz1 * UOv3YtvccRbX <= ! DJ1sMnx4 - I8V9IT - ck8B 
    + FK7guS4tk7jdyhsXe4Ry - vXsuuhX8 - GV0bDd05D7rA9M4 
    && Fjw9bxFvAhFtvI0ERNo ( XrTo_ ) == AcNj3qfKjjZW == 
    LoP3Dc1QbHy74JXlt5M4 != clBMi7zbf12Q7 <= gA9pbQT6yn 
    <= y_4kD1Kg0qiK && - pKw * G5 / yO8TcWHUPPkd + jQz85 
    >= _tzX0T5kBAaICscbap < YfCappnPsrTe > GBWIulwUF0jeuH 
    != SCcfdZF < d3AZAwGAKExKDTGUY >= KAple ;
  if ( ! [ ! ! ! - Ea = - - ! LM0 = - zkEvJHOA * T 
    + Bfv2jsrq195Zu1DusaXb && e9BIDWymsBXGK || ZAjLTQ 
    || iMolk0LVe7Q )   if ( - N6Ais8fOtJAQsSPG = lxUt9pm009vpn0RiLNC 
    )   if ( + s9ynWyI6 )   if ( SG21MYFAqIC7X6u )   if 
    ( iq )   if ( KqTQyJY9xn90J )   pSp ;






== }
